#692 #773
Better testing of the advanced paging